--- a/frontend/projet-gl/src/components/navbar/Navbar.css
+++ b/frontend/projet-gl/src/components/navbar/Navbar.css
@@ -32,8 +32,9 @@
 
 
 .searchBar{
-    align-self: center;
     display: flex;
+    align-self: center;
+    align-items: center;
     justify-content: left;
     margin: 10px 5% 1% 5%;
     height: 40%;
@@ -45,7 +46,7 @@
 }
 .searchBar input{
     height: 100%;
-    width: 90%;
+    width: 95%;
     outline: none;
     border: none;
     background-color: #DFE2E2;
@@ -54,10 +55,8 @@
 .searchIcon{
     height: fit-content;
     cursor: pointer;
-    position: relative;
-    left: 1%;
-    top: 18%;
     margin-right: 10px;
+    margin-left: 10px;
 }
 .registerButton{
     color: #1F2F31;
@@ -78,4 +77,96 @@
 #profileIcon{
     position: relative;
     right: 20%;
+}
+
+  
+  .dropdown-menu{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: absolute;
+    top: 105px;
+    right: 20px;
+    border-radius: 5px;
+    border: 2px solid white;
+    width: 200px;
+    background-color: #375558;
+    padding: 0 10px;
+  }
+/*   
+  .dropdown-menu::before{
+    content: '';
+    position: absolute;
+    right: 20px;
+    height: 20px;
+    width: 20px;
+    background: var(--secondary-bg);
+    transform: rotate(45deg);
+  } */
+  
+  .dropdown-menu.active{
+    opacity: 1;
+    visibility: visible;
+    transform: translateY(0);
+    transition: 0.5s ease;
+  }
+  
+  .dropdown-menu.inactive{
+    opacity: 0;
+    visibility: hidden;
+    transform: translateY(-20px);
+    transition: 0.5s ease;
+  }
+  
+  .dropdown-menu ul{
+    margin: 3px;
+    padding: 0;
+}
+  .dropdown-menu ul li{
+    height: fit-content;
+    padding: 0  0;
+    border-top: 1px solid rgba(0, 0, 0, 0.05);
+    list-style-type: none;
+  }
+  
+  .dropdown-menu ul li:hover a{
+    color: #fbf8ec;
+    cursor: pointer;
+  }
+  .dropdown-menu ul li a{
+    font-weight: 600;
+    font-size: 1.2rem;
+    cursor: pointer;
+  }
+  
+  .dropdownItem{
+    margin: 10px auto;
+  }
+  
+  .dropdownItem a{
+    max-width: 100px;
+    margin-left: 10px;
+    transition: var(--speed);
+  }
+
+.messageBody{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: fit-content;
+    width: 100%;
+    background-color: #1F2F31;
+    border-radius: 5px;
+    border: 2px solid white;
+    color: #DFE2E2;
+}
+
+.contenuMessage{
+    margin-top: 0;
+    display: flex;
+    flex-direction: row;
+}
+.senderName{
+    margin: 10px;
+    width: fit-content;
 }
